--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body
 {
-    color: dodgerblue;
+    color: forestgreen;
     text-align: center;
-    font-family: "Arial";
+    font-family: "Helvetica";
 }
 
