--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,8 @@
 body
 {
-    color: forestgreen;
+    color: steelblue;
     text-align: center;
     font-family: "Helvetica";
+    font-size: 8px;
 }
 
